--- a/mantra_hmi/scripts/mantra_hmi_pro_pyqt5/mantra_hmi_pro.ui
+++ b/mantra_hmi/scripts/mantra_hmi_pro_pyqt5/mantra_hmi_pro.ui
@@ -1221,6 +1221,16 @@
      </item>
      <item>
       <property name="text">
+       <string>0.05 deg</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>0.01 deg</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
        <string>0.80 rad</string>
       </property>
      </item>
@@ -1247,6 +1257,11 @@
      <item>
       <property name="text">
        <string>0.02 rad</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>0.01 rad</string>
       </property>
      </item>
     </widget>
@@ -1439,7 +1454,7 @@
       </rect>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>9</number>
      </property>
      <item>
       <property name="text">
@@ -1499,6 +1514,26 @@
      <item>
       <property name="text">
        <string>1.00 cm</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>0.50 cm</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>0.10 cm</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>0.05 cm</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>0.01 cm</string>
       </property>
      </item>
     </widget>
